# Jaljira

backend/: README.md  database.db  main.py  pyproject.toml
backend/database/: __init__.py  auth.py  db.py  middleware.py  models.py  schema.py
backend/database/api/: chat.py  routes.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: app-sidebar.tsx  page-header.tsx
frontend/src/components/tasks/: edit-task-dialog.tsx  feedback-message.tsx  field.tsx  search-box.tsx  task-chat.tsx  task-table.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts  tasks.ts
frontend/src/pages/: CreateTaskPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  TasksPage.tsx
frontend/src/types/: tasks.ts
