[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "pydantic[email]>=2.12.5",
    "psycopg2>=2.9.11",
]
